<resources>
    <string name="app_name">Dots &amp; Boxes</string>
    <string name="button_start_game">Play</string>
    <string name="button_popup">Exit</string>
    <string name="slider_human_text">players: %1$d</string>
    <string name="slider_computer_text">bots: %1$d</string>
    <string name="slider_difficulty_text">difficulty: %1$d</string>
    <string name="slider_column_text">columns: %1$d</string>
    <string name="slider_row_text">rows: %1$d</string>
    <string name="switch_shuffle_text">shuffle: %1$s </string>
    <string name="scores">Scores</string>
    <string name="restart_game">Restart</string>
    <string name="return_to_menu">Home</string>
</resources>
